item-information-button z-index fixed

--- a/one-cgiar-front/src/app/shared/components/utils/item-information-button/item-information-button.component.scss
+++ b/one-cgiar-front/src/app/shared/components/utils/item-information-button/item-information-button.component.scss
@@ -29,6 +29,7 @@
             border: 1px solid rgb(233, 233, 233);
             border-radius: 5px;
             box-shadow: 0px 0px 7px rgb(224, 224, 224);
+            z-index: 100;
         }
     }
 }
